<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp" />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="21sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/weather_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Saturday, September 24" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/horizontal_middle"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/art_clouds" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon"
            tools:text="Mayormente nublado comenzando por la tarde" />

        <TextView
            android:id="@+id/high_temperature"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textColor="@color/colorWhite"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weather_icon"
            app:layout_constraintVertical_bias="0.0"
            tools:text="33\u00b0 C" />


        <TextView
            android:id="@+id/low_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/high_temperature"
            app:layout_constraintLeft_toLeftOf="@+id/high_temperature"
            app:layout_constraintRight_toRightOf="@+id/high_temperature"
            app:layout_constraintTop_toTopOf="@id/weather_description"
            app:layout_constraintVertical_bias="0.7"
            tools:text="19\u00b0 C" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/extra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="16dp"
        tools:ignore="GradleDependency">

        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity_label"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details"
            app:layout_constraintVertical_bias="0.33" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle2"
            tools:text="38%" />

        <TextView
            android:id="@+id/pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_label"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toTopOf="@+id/extra_details" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle2"
            tools:text="995 hPa" />

        <TextView
            android:id="@+id/wind_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_label"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/extra_details"
            app:layout_constraintLeft_toLeftOf="@+id/extra_details"
            app:layout_constraintTop_toBottomOf="@+id/pressure_label"
            app:layout_constraintVertical_bias="0.65999997" />

        <TextView
            android:id="@+id/wind_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/wind_label"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle2"
            tools:text="4km/h NW" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>